eslint and prettier configuration

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1,19 +1,53 @@
 {
-    "nav":{
-        "title":"Demo App",
-        "mode":"mode"
-    },
-    "dashboard":{
-        "title":"Dashboard",
-        "sales":"Weekly Sales",
-        "products":"Products",     
-        "income":"Income" ,      
-        "users":"Users",
-        "chart":{
-            "title":"Conversion Rates",
-            "description":"(+43%) than last year"
-        }
-
+  "nav": {
+    "title": "Demo App",
+    "mode": "mode"
+  },
+  "dashboard": {
+    "title": "Dashboard",
+    "sales": "Weekly Sales",
+    "products": "Products",
+    "income": "Income",
+    "users": "Users",
+    "chart": {
+      "title": "Conversion Rates",
+      "description": "(+43%) than last year"
     }
+  },
+  "login": {
+    "title": "Sign In",
+    "email": {
+      "label": "Email Address",
+      "message": "Enter Valid Email"
+    },
+
+    "password": {
+      "label": "Password",
+      "message": "Password is required"
+    },
+    "submit": "Sign In",
+    "linkText": "Don't have an account? Sign Up"
+  },
+  "signup": {
+    "title": "Sign Up",
+    "fName": {
+      "label": "First Name",
+      "message": "First Name is required"
+    },
+    "lName": {
+      "label": "Last Name",
+      "message": "Last Name is required"
+    },
+    "email": {
+      "label": "Email Address",
+      "message": "Enter Valid Email"
+    },
+    "password": {
+      "label": "Password",
+      "message": "Password is required"
+    },
+    "submit": "Sign Up",
+    "linkText": "Already have an account? Login"
+  },
+  "logout": "Logout"
 }
-  
