--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -14,6 +14,16 @@
       "description": "(+43%) que l'an dernier"
     }
   },
+  "crud": {
+    "title": "crudité",
+    "name": "Nom",
+    "email": "E-mail",
+    "actions": "Actions",
+    "add": "Ajouter",
+    "edit": "Mise à jour",
+    "delete": "Effacer",
+    "message": "Ceci est un champ obligatoire"
+  },
   "login": {
     "title": "S'identifier",
     "email": {
